--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -65,5 +65,8 @@ group :development do
   # gem "spring"
 end
 
+# Use ActiveModel has_secure_password
+gem 'bcrypt', '~> 3.1.7'
+
 gem 'rack-cors'
 
