--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -39,6 +39,8 @@ gem "jbuilder"
 #Added twilio for texting
 gem 'twilio-ruby', '~> 6.7.0'
 
+gem 'devise'
+
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
  gem "bcrypt", "~> 3.1.7"
 
