--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.10",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
