--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -23,7 +23,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: jungle_test
+  database: restaurant_test
   username: development
   password: development
 
