Added screenshots, created readME, added info to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,9 @@
 DB_USERNAME=development
 DB_PASSWORD=development
+
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
+
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
